# api.tahuruzzoha.me

./: .gitignore  Pipfile  build.sh  db.sqlite3  pyproject.toml
main/: admin.py  models.py  views.py
main/migrations/: 0001_initial.py
mysite/: settings.py  urls.py
render/templates/render/: index.html
staticfiles/: staticfiles.json
todos/templates/todos/: index.html
